fix example & update crud template
